# deep-classf-runtime-wrappers

./: .clang-format  .gitignore  README.md  tensorflow_model_conversion.ipynb
ONNXruntimeWrapper/: .gitignore  CMakeLists.txt  build_for_elk.sh  compile_elk_aarch64_RPI4.sh  compile_x86-64.sh
ONNXruntimeWrapper/libs/: build_onnx.sh
ONNXruntimeWrapper/src/: onnx-classifier-lib.cpp  onnxwrapper.cpp  onnxwrapper.h  testlib.cpp
ONNXruntimeWrapper/src/test/: test_base.cpp  testlib.cpp  testmeasure.cpp
RTNeuralWrapper/: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  build_for_elk.sh  compile_elk_aarch64_RPI4.sh
RTNeuralWrapper/cmake/: ChooseBackend.cmake
RTNeuralWrapper/libs/RTNeural/: CMakeLists.txt  ModelT.h
RTNeuralWrapper/src/: RTNeural-classifier-lib.cpp  rtneuralwrapper.cpp  testlib.cpp
RTNeuralWrapper/src/test/: test1.cpp  testmeasure.cpp
TFLiteWrapper/: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  build_elk_aarch64_RPI4.sh  compile_static_lib_aarch64.sh  compile_static_lib_x86_64.sh
TFLiteWrapper/2.11.0/: .gitignore  CMakeLists.txt  build_elk_aarch64_RPI4.sh  compileOnlyTFLite_elk_aarch64.sh  compile_amd64.sh  compile_elk_aarch64_RPI4.sh  getDependencies.py  toolchain.cmake
TFLiteWrapper/2.11.0/src/: tflitewrapper.cpp  tflitewrapper.h
TFLiteWrapper/2.11.0/src/test/: test_2d.cpp  test_base.cpp  test_bulk.cpp
TFLiteWrapper/2.5.3/: .gitignore  CMakeLists.txt  compile_DEBUG.sh  compile_elk_aarch64_RPI4.sh  compile_elk_aarch64_RPI4_debug.sh  data
TFLiteWrapper/2.5.3/src/: tflitewrapper.cpp  tflitewrapper.h
TFLiteWrapper/2.5.3/src/test/: test_2d.cpp
TFLiteWrapper/2.7.0/: .gitignore  CMakeLists.txt  compile_elk_aarch64_RPI4.sh
TFLiteWrapper/2.7.0/data/: dense1d_define_input_shape.tflite  nonreshaped_best_704_2d.tflite  reshaped_2d_definedinsize.tflite
TFLiteWrapper/2.7.0/data/bulk/: small_labels.csv
TFLiteWrapper/2.7.0/src/: tflitewrapper.cpp  tflitewrapper.h
TFLiteWrapper/2.7.0/src/test/: test1.cpp
TFLiteWrapper/bulktest_library/: compile_with_lib_aarch64.sh  compile_with_lib_x86_64.sh  copyAllToelk.sh  main.cpp
TFLiteWrapper/bulktest_library/data/: bulkinferencetest_labels.csv
TFLiteWrapper/bulktest_library/smalldata/: bulkinferencetest_180features.csv
TFLiteWrapper/compiled_library/: liteclassifier.h
TFLiteWrapper/src/: classifier-lib.cpp  tflitewrapper.cpp  tflitewrapper.h
TFLiteWrapper/src/test/: main.cpp  test2.cpp
TFLiteWrapper/tensorflow-src/tensorflow/lite/examples/timbreinference/: BUILD  TheFileForBuildingExec-BUILD  classifier-lib.cpp  classifier-lib.hpp  inference.cpp
TFLiteWrapper/test_library/: compile_with_lib_aarch64.sh  compile_with_lib_x86_64.sh  dense_model.tflite  dense_model_partially_quantized.tflite  inference_linux_aarch64  inference_x86_64  main.cpp  model.tflite
TFLiteWrapper/your_library_here/: classifier-lib.cpp  classifier-lib.hpp
TFLiteWrapper2.11.0/: .gitignore  CMakeLists.txt
TFLiteWrapper2.11.0/src/test/: test_2d.cpp  test_bulk.cpp
TFLiteWrapper2.5.3/: .gitignore  CMakeLists.txt  compile_elk_aarch64_RPI4.sh  compile_elk_aarch64_RPI4_debug.sh
TFLiteWrapper2.5.3/src/: tflitewrapper.cpp  tflitewrapper.h
TFLiteWrapper2.5.3/src/test/: test_base.cpp
TFLiteWrapper2.7.0/: build_and_test.sh  build_elk_aarch64_RPI4.sh
TFLiteWrapper2.7.0/data/: conv1d_define_input_shape.tflite  conv1d_train.tflite  conv2d_1.tflite  conv2d_define_input_shape.tflite  conv2d_train.tflite  dense1d_train.tflite  dense_1.tflite  reshaped_2d_trainedsize.tflite  test_model_2d.tflite  testtesttest.tflite
TFLiteWrapper2.7.0/src/test/: test2.cpp
TorchScriptWrapper/: .gitignore  CMakeLists.txt  README.md  build_for_elk.sh  compile_elk_aarch64_RPI4.sh
TorchScriptWrapper/build_aarch64/: test-torch-lib
TorchScriptWrapper/src/: testlib.cpp  torch-classifier-lib.cpp  torch-classifier-lib.h  torchscriptwrapper.cpp  torchscriptwrapper.h
TorchScriptWrapper/src/test/: test1.cpp  testmeasure.cpp
TorchScriptWrapper/test_library/: inference_linux_aarch64  inference_x86_64  main.cpp  test_model.tflite
TorchScriptWrapper/the_compiled_library/: libtorchclassifier.lib
TorchScriptWrapper/your_library_here/: classifier-lib.cpp
